--- a/index.html
+++ b/index.html
@@ -534,6 +534,30 @@
             </li>
           </ul>
         </div>
+
+        <div class="footer-bottom">
+          <p class="social-media">Subscribe</p>
+          <form class="footer-form">
+            <label>
+              <input
+                type="email"
+                name="footer-email"
+                class="footer-input"
+                placeholder="E-mail"
+                required
+                id="footer-email"
+              />
+            </label>
+            <svg class="modal-icon" width="18" height="20">
+              <use href="./images/icons.svg#icon-person-black"></use>
+            </svg>
+            <button type="submit" class="footer-form-btn">
+              Subscribe<svg class="footer-soc-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-fly"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
