--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
         <div class="footer-bottom">
           <p class="social-media">Subscribe</p>
           <form class="footer-form">
-            <label>
+            <label class="footer-email-label">
               <input
                 type="email"
                 name="footer-email"
@@ -547,16 +547,13 @@
                 required
                 id="footer-email"
               />
+              <button type="submit" class="footer-form-btn">
+                Subscribe<svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-fly"></use>
+                </svg>
+              </button>
             </label>
-            <svg class="modal-icon" width="18" height="20">
-              <use href="./images/icons.svg#icon-person-black"></use>
-            </svg>
-            <button type="submit" class="footer-form-btn">
-              Subscribe<svg class="footer-soc-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-fly"></use>
-              </svg>
-            </button>
-          </form>
+            </form>
         </div>
       </div>
     </footer>
