--- a/index.html
+++ b/index.html
@@ -562,7 +562,11 @@
 
     <div class="backdrop">
       <div class="modal">
-        <button type="button" class="modal-close">X</button>
+        <button type="button" class="modal-close">
+          <svg class="button-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
         <p class="title modal-title">
           Leave your contacts and we will call you back
         </p>
@@ -613,7 +617,7 @@
             </div>
           </div>
 
-          <div class="modal-field">
+          <div class="modal-comment">
             <label for="user-comment" class="modal-label">Comment</label>
             <textarea
               name="user-comment"
@@ -621,10 +625,24 @@
               placeholder="Text input"
               class="modal-text"
             ></textarea>
-            <label>
-              <input type="checkbox" name="hobby" value="sports" checked />
-              I accept the terms and conditions of the Privacy Policy
-            </label>
+          </div>
+          <div class="modal-checkbox">
+            <input
+              type="checkbox"
+              name="privacy"
+              required
+              id="privacy"
+              class="modal-check visually-hidden"
+            />
+            <label for="privacy" class="check-text">
+              <span>
+                <svg class="modal-check-icon" width="10" height="10">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="" class="check-link">Privacy Policy</a></label
+            >
           </div>
 
           <button class="modal-btn" type="submit">Send</button>
