--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
     <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close">
-          <svg class="button-close-icon" width="8" height="8">
+          <svg class="close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
@@ -629,14 +629,14 @@
           <div class="modal-checkbox">
             <input
               type="checkbox"
-              name="privacy"
+              name="user-privacy"
               required
-              id="privacy"
+              id="user-privacy"
               class="modal-check visually-hidden"
             />
-            <label for="privacy" class="check-text">
-              <span>
-                <svg class="modal-check-icon" width="10" height="10">
+            <label for="user-privacy" class="check-text">
+              <span class="check-title">
+                <svg class="modal-check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
