--- a/index.html
+++ b/index.html
@@ -630,6 +630,7 @@
             <input
               type="checkbox"
               name="user-privacy"
+              value="true"
               required
               id="user-privacy"
               class="modal-check visually-hidden"
